Swagger solution module refactor (but not fixed — test skipped by pom property for successful build)